--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "rc-slider": "^10.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
     "react-stripe-checkout": "^2.6.3",
     "universal-cookie": "^4.0.4"
